unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Onsite_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>No longer used as needs to lookup to contact.</description>
    <inlineHelpText>No longer used as needs to lookup to contact.</inlineHelpText>
    <label>(No Longer Used)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GES_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>