unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Onsite_Contact_Person_FML__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact_Person_FML__c</fullName>
    <formula>IF(Onsite_Contact_Person_Other__c != NULL, Onsite_Contact_Person_Other__c,
 Onsite_Contact__r.FirstName + &#39; &#39; +  Onsite_Contact__r.LastName)</formula>
    <inlineHelpText>First name and last name of the on site contact person</inlineHelpText>
    <label>Onsite Contact Person</label>
    <type>Text</type>
</CustomField>