unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Onsite_Contact_Person_Number_FML__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact_Person_Number_FML__c</fullName>
    <formula>IF( AND(Onsite_Contact_Person_Other__c != NULL, Onsite_Contact_Person_Number_Other__c != NULL),
 Onsite_Contact_Person_Number_Other__c,
 Onsite_Contact__r.Phone)</formula>
    <inlineHelpText>Phone number for the on site contact person</inlineHelpText>
    <label>Onsite Contact Person Number</label>
    <type>Text</type>
</CustomField>