unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Onsite_Contact_Person_Number_Other__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact_Person_Number_Other__c</fullName>
    <description>Manual phone number entry when onsite contact person&#39;s name is used.</description>
    <inlineHelpText>Manual phone number entry when onsite contact person&#39;s name is used.</inlineHelpText>
    <label>Onsite Contact Person # Other</label>
    <length>30</length>
    <type>Text</type>
</CustomField>