unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Onsite_Contact_Person_Other__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact_Person_Other__c</fullName>
    <description>Name of the onsite contact person if not in salesforce.</description>
    <inlineHelpText>Name of the onsite contact person if not in salesforce.</inlineHelpText>
    <label>Onsite Contact Person Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>