unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>GES Connect Order Object.</inlineHelpText>
    <label>Order</label>
    <referenceTo>GC_Order__c</referenceTo>
    <relationshipName>GES_Order_Tasks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>