unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Order_Header_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_Header_ID__c</fullName>
    <description>Order Header ID as returned from the external system.</description>
    <inlineHelpText>Order Header ID as returned from the external system.</inlineHelpText>
    <label>(Hidden)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>