unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Order_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_ID__c</fullName>
    <description>Order line ID from the external system.</description>
    <inlineHelpText>Order line ID from the external system.</inlineHelpText>
    <label>Order Line ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>