unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>Order Number in which this line item belongs to from the external system.  Populated when the order has been submitted.</description>
    <inlineHelpText>Order Number in which this line item belongs to from the external system.</inlineHelpText>
    <label>Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>