unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Original_Task_Revision2__c.field-meta.xml
<CustomField>
    <fullName>Original_Task_Revision2__c</fullName>
    <description>Main Salesforce ID of the originating task for the purpose of displaying revision history</description>
    <inlineHelpText>Main Salesforce ID of the originating task for the purpose of displaying revision history</inlineHelpText>
    <label>Original Task Revision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>