unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Outdoors__c.field-meta.xml
<CustomField>
    <fullName>Outdoors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the item is to be used outdoors.</description>
    <inlineHelpText>Check if the item is to be used outdoors.</inlineHelpText>
    <label>Outdoors?</label>
    <type>Checkbox</type>
</CustomField>