unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Parent_Category__c.field-meta.xml
<CustomField>
    <fullName>Parent_Category__c</fullName>
    <label>Parent Category</label>
    <length>225</length>
    <type>Text</type>
</CustomField>