unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Previous_Revision__c.field-meta.xml
<CustomField>
    <fullName>Previous_Revision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the previous version of this task.</description>
    <inlineHelpText>Link to the previous version of this task.</inlineHelpText>
    <label>Previous Revision</label>
    <referenceTo>GC_GES_Order_Task__c</referenceTo>
    <relationshipName>GES_Orders211</relationshipName>
    <type>Lookup</type>
</CustomField>