unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <description>Previous Status when a status is changing.</description>
    <inlineHelpText>Previous Status when a status is changing.</inlineHelpText>
    <label>Previous Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>