unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Item Price / Unit from the External System.  Populated on item selection.</description>
    <inlineHelpText>Item Price / Unit from the External System.  Populated on item selection.</inlineHelpText>
    <label>Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>