unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Production_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Production_Remarks__c</fullName>
    <description>Additional information needed for the Production Facility.</description>
    <inlineHelpText>Additional information needed for the Production Facility.</inlineHelpText>
    <label>Work Order Remarks</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>