unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Proof_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Proof_Approver_2__c</fullName>
    <description>Name of the graphics approver for this task.</description>
    <inlineHelpText>Name of the graphics approver for this task.</inlineHelpText>
    <label>Proof Approver 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>