unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Proof_Link__c.field-meta.xml
<CustomField>
    <fullName>Proof_Link__c</fullName>
    <label>Proof Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>