unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Number of Units to Order</description>
    <inlineHelpText>Number of Units to Order</inlineHelpText>
    <label>Quantity (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>