unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/QuantityNum__c.field-meta.xml
<CustomField>
    <fullName>QuantityNum__c</fullName>
    <description>Number of Units to Order</description>
    <inlineHelpText>Number of Units to Order</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>