unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Ready_For_Process__c.field-meta.xml
<CustomField>
    <fullName>Ready_For_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not currently used.</description>
    <inlineHelpText>Not currently used.</inlineHelpText>
    <label>Ready For Process</label>
    <type>Checkbox</type>
</CustomField>