unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Ready_For_Send__c.field-meta.xml
<CustomField>
    <fullName>Ready_For_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not currently used.</description>
    <inlineHelpText>Not currently used.</inlineHelpText>
    <label>Ready For Send</label>
    <type>Checkbox</type>
</CustomField>