unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Removal_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Removal_Date_Time__c</fullName>
    <description>If Set, will use this time instead of the Default Order&#39;s Removal Date/Time</description>
    <inlineHelpText>If Set, will use this time instead of the Default Order&#39;s Removal Date/Time</inlineHelpText>
    <label>Removal Date/Time</label>
    <type>DateTime</type>
</CustomField>