unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Text field that displays current revision number</description>
    <inlineHelpText>Current revision number</inlineHelpText>
    <label>Revision</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>