unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/SA_Venue_Location__c.field-meta.xml
<CustomField>
    <fullName>SA_Venue_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Venue Location setup by the Account Manager.</description>
    <inlineHelpText>Venue Location setup by the Account Manager.</inlineHelpText>
    <label>Venue Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>GC_Show_Attribute__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Venue Location</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GC_Show_Attribute__c</referenceTo>
    <relationshipName>GES_Order_Tasks33</relationshipName>
    <type>Lookup</type>
</CustomField>