unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Save_Signs__c.field-meta.xml
<CustomField>
    <fullName>Save_Signs__c</fullName>
    <description>Yes/No to save the signs after the Show has been completed.</description>
    <inlineHelpText>Yes/No to save the signs after the Show has been completed.</inlineHelpText>
    <label>Save Signs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>