unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Show_Management_Field__c.field-meta.xml
<CustomField>
    <fullName>Show_Management_Field__c</fullName>
    <description>Special Notes for the Order Task.</description>
    <inlineHelpText>Special Notes.</inlineHelpText>
    <label>Special Instructions (Client Remarks)</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>