unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Show_Name__c</fullName>
    <description>Formula to Show Name</description>
    <formula>Order__r.Show_Name__c</formula>
    <inlineHelpText>Show Name</inlineHelpText>
    <label>Show Name</label>
    <type>Text</type>
</CustomField>