unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Show_Site_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Show_Site_Remarks__c</fullName>
    <description>Additional Information needed for the Show Site.</description>
    <inlineHelpText>Additional Information needed for the Show Site.</inlineHelpText>
    <label>Show-Site Remarks</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>