unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Sign_Copy__c.field-meta.xml
<CustomField>
    <fullName>Sign_Copy__c</fullName>
    <description>Sign Copy field for Graphics Orders.</description>
    <inlineHelpText>Sign Copy field for Graphics Orders.</inlineHelpText>
    <label>Sign Copy</label>
    <length>4000</length>
    <type>Html</type>
</CustomField>