unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Sign_Length__c.field-meta.xml
<CustomField>
    <fullName>Sign_Length__c</fullName>
    <description>Sign height in inches for a custom graphics order.</description>
    <inlineHelpText>Sign height in inches for a custom graphics order.</inlineHelpText>
    <label>Sign Height (in)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>