unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Sign_Title__c.field-meta.xml
<CustomField>
    <fullName>Sign_Title__c</fullName>
    <description>Graphics Order Sign Title</description>
    <inlineHelpText>Title to be displayed on the Sign</inlineHelpText>
    <label>Sign Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>