unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Sign_Width__c.field-meta.xml
<CustomField>
    <fullName>Sign_Width__c</fullName>
    <description>Sign length in inches for a custom graphics order.</description>
    <inlineHelpText>Sign length in inches for a custom graphics order.</inlineHelpText>
    <label>Sign Width (in)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>