unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Special_Instructions_Client_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions_Client_Remarks__c</fullName>
    <description>Special Notes for the Order Task</description>
    <inlineHelpText>Special Notes for the Order Task</inlineHelpText>
    <label>Special Instructions (Client Remarks)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>