unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Picklist field that display&#39;s different status values</description>
    <inlineHelpText>Status of GES Order Task</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Graphics Requested</fullName>
            </value>
            <value>
                <fullName>Graphics Submitted</fullName>
            </value>
            <value>
                <fullName>Graphics Rejected</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Submitted to Graphics</fullName>
            </value>
            <value>
                <fullName>Submitted For AM Review</fullName>
            </value>
            <value>
                <fullName>Pending AM Review</fullName>
            </value>
            <value>
                <fullName>Proof Waiting for Approval</fullName>
            </value>
            <value>
                <fullName>Proof Changes Required</fullName>
            </value>
            <value>
                <fullName>Proof Approved</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>