unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>Date/Time this order was submitted to the External System</description>
    <inlineHelpText>Date/Time this order was submitted to the External System</inlineHelpText>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>