unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>Total price (quantity * unit price)</description>
    <formula>VALUE(Price__c)  *  QuantityNum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total price (quantity * unit price)</inlineHelpText>
    <label>Total $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>