unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <description>Units identified by the Order Item.</description>
    <inlineHelpText>Units identified by the Order Item.</inlineHelpText>
    <label>Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>