unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/User_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>User_Item_Description__c</fullName>
    <description>Additional description used internally to describe the item.</description>
    <inlineHelpText>Additional description used internally to describe the item.</inlineHelpText>
    <label>User Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>