unpackaged/main/default/objects/GC_GES_Order_Task__c/validationRules/Do_not_allow_0_on_Discount.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_allow_0_on_Discount</fullName>
    <active>true</active>
    <description>Users cannot put a 0 in Discount</description>
    <errorConditionFormula>Booth_Area_Discount_Override__c = 0</errorConditionFormula>
    <errorDisplayField>Booth_Area_Discount_Override__c</errorDisplayField>
    <errorMessage>Booth Area Discount cannot be zero.</errorMessage>
</ValidationRule>