unpackaged/main/default/objects/GC_GES_Order_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SA_Venue_Location__c</columns>
    <columns>Item_Number__c</columns>
    <columns>Description__c</columns>
    <columns>Price__c</columns>
    <columns>QuantityNum__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>