unpackaged/main/default/objects/GC_GES_Order_Task__c/listViews/Graphics_Codes_MUST_FIX.listView-meta.xml
<ListView>
    <fullName>Graphics_Codes_MUST_FIX</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Show_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Job_Number__c</columns>
    <columns>Item_Number__c</columns>
    <columns>Description__c</columns>
    <columns>Price__c</columns>
    <columns>New_Price__c</columns>
    <columns>QuantityNum__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Order_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Number__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Item_Number__c</field>
        <operation>equals</operation>
        <value>600533,600534,600853,600851,600535,601099</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled,Archived</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>7/1/2023 12:00 AM</value>
    </filters>
    <label>Exhibitor Graphics Codes - MUST FIX</label>
</ListView>