unpackaged/main/default/objects/GC_GES_Order_Task__c/listViews/TEMPLATE_FIND_AND_FIX_NEW_PRICE.listView-meta.xml
<ListView>
    <fullName>TEMPLATE_FIND_AND_FIX_NEW_PRICE</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Formula_Booth_Area__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CORE_Number_FML__c</columns>
    <columns>User_Item_Description__c</columns>
    <columns>Item_Number__c</columns>
    <columns>Description__c</columns>
    <columns>Order__c</columns>
    <columns>Production_Remarks__c</columns>
    <columns>Price__c</columns>
    <columns>New_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_Number__c</field>
        <operation>equals</operation>
        <value>ENTER JOB NUMBER</value>
    </filters>
    <filters>
        <field>CORE_Number_FML__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>New_Price__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Item_Number__c</field>
        <operation>notEqual</operation>
        <value>900018,900040,900004,900301,900270,900079,900300,902001,900116,902000,900615,900608,900007,902233,900644,900400,900628,900222,900722,902100,900251,900003</value>
    </filters>
    <label>TEMPLATE: FIND AND FIX NEW PRICE</label>
</ListView>