unpackaged/main/default/objects/GC_GES_Order_Task__c/listViews/TEMPLATE_Submitted.listView-meta.xml
<ListView>
    <fullName>TEMPLATE_Submitted</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Formula_Booth_Area__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CORE_Number_FML__c</columns>
    <columns>User_Item_Description__c</columns>
    <columns>Item_Number__c</columns>
    <columns>Description__c</columns>
    <columns>Order__c</columns>
    <columns>Production_Remarks__c</columns>
    <columns>Proof_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_Number__c</field>
        <operation>equals</operation>
        <value>ENTER JOB NUMBER</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>TEMPLATE: Submitted by Client</label>
</ListView>